Toevoegen basic layout, container, nav op juiste plaats, lettertype, kleuren nav

--- a/home.html
+++ b/home.html
@@ -15,28 +15,73 @@
 
   <body>
 
-    <div class="container">
 
-          <div class="row nav-room-left">
-            <div class="col-6">
-              watchlist, profile, logout
+    <div class="container yellow">
+
+
+
+        <div class="top-nav row nav-room-left">
+
+            <div class="col-6 red">
+
+                <ul class="nav">
+                    <li class="nav-item">
+                      
+                      <a class="nav-link" href="#">WATCHLIST</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">PROFILE</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">LOGOUT</a>
+                    </li>
+                </ul>
+
             </div>
-            <div class="col-4">
+
+
+            <div class="col-3 blue nav-room-between float-right">
               search, search-icon
             </div>
-          </div>
 
-          <div class="row nav-room-left">
-            <div class="col-8">
-              HOME ART ISEARCH MYAUCTIONS MYBIDS CONTACT
+        </div>
+
+
+
+
+        <!--<div class="row nav-room-left">
+
+            <div class="col-8 red">
+
+                <ul class="nav">
+                    <li class="nav-item">
+                      <a class="nav-link active" href="#">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">ART</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">ISEARCH</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">MYAUCTIONS</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">MYBIDS</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">CONTACT</a>
+                    </li>
+                </ul>
+
             </div>
-            <div class="col-2">
-              NL, FR, EN
+
+
+            <div class="col-2 blue nav-room-between float-right">
+              <p><a href="#">NL</a> <a href="#">FR</a> <a href="#">EN</a></p>
             </div>
-          </div>
 
-
-
+        </div>-->
 
     </div>
 
