Bovenste menubalk toegevoegd

--- a/home.html
+++ b/home.html
@@ -20,68 +20,73 @@
 
 
 
-        <div class="top-nav row nav-room-left">
+        <div class="nav-room-left">
 
-            <div class="col-6 red">
+            <div class="top-nav row justify-content-between">
+                <div class="col-6 top-nav-menu red">
 
-                <ul class="nav">
-                    <li class="nav-item">
-                      
-                      <a class="nav-link" href="#">WATCHLIST</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">PROFILE</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">LOGOUT</a>
-                    </li>
-                </ul>
+                    <ul class="nav">
+                        <li class="nav-item">
+                          <img id="watchlist" class="nav-icons" src="images/transparant.png">
+                          <a class="nav-link navbar-left" href="#">WATCHLIST</a>
+                        </li>
 
+                        <li class="nav-item nav-top-middle">
+                          <img id="profile" class="nav-icons" src="images/transparant.png">
+                          <a class="nav-link nav-top-middle-text" href="#">PROFILE</a>
+                        </li>
+
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">LOGOUT</a>
+                        </li>
+                    </ul>
+
+                </div>
+
+
+                <div class="col-3 blue float-right">
+                  search, search-icon
+                </div>
             </div>
 
 
-            <div class="col-3 blue nav-room-between float-right">
-              search, search-icon
-            </div>
+
+
+            <!--<div class="row">
+
+                <div class="col-8 red">
+
+                    <ul class="nav">
+                        <li class="nav-item">
+                          <a class="nav-link active" href="#">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">ART</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">ISEARCH</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">MYAUCTIONS</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">MYBIDS</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">CONTACT</a>
+                        </li>
+                    </ul>
+
+                </div>
+
+
+                <div class="col-2 blue nav-room-between float-right">
+                  <p><a href="#">NL</a> <a href="#">FR</a> <a href="#">EN</a></p>
+                </div>
+
+            </div>-->
 
         </div>
-
-
-
-
-        <!--<div class="row nav-room-left">
-
-            <div class="col-8 red">
-
-                <ul class="nav">
-                    <li class="nav-item">
-                      <a class="nav-link active" href="#">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">ART</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">ISEARCH</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">MYAUCTIONS</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">MYBIDS</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">CONTACT</a>
-                    </li>
-                </ul>
-
-            </div>
-
-
-            <div class="col-2 blue nav-room-between float-right">
-              <p><a href="#">NL</a> <a href="#">FR</a> <a href="#">EN</a></p>
-            </div>
-
-        </div>-->
 
     </div>
 
