--- a/home.html
+++ b/home.html
@@ -44,8 +44,8 @@
                 </div>
 
 
-                <div class="col-3 blue float-right">
-                  search, search-icon
+                <div class="col-4 blue searchbar">
+                  <input type="text" placeholder="Search">
                 </div>
             </div>
 
