Toevoegen searchbar icon

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         <div class="nav-room-left">
 
             <div class="top-nav row justify-content-between">
-                <div class="col-6 top-nav-menu red">
+                <div class="col-8 top-nav-menu red">
 
                     <ul class="nav">
                         <li class="nav-item">
@@ -45,7 +45,10 @@
 
 
                 <div class="col-4 blue searchbar">
-                  <input type="text" placeholder="Search">
+                  <form action="home.html">
+                    <input type="text" placeholder="Search" name="search">
+                    <button type="submit"><img src="images/searchicon.png" alt="search-icon"></i></button>
+                  </form>
                 </div>
             </div>
 
