navigatie onderste menu toegevoegd

--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
 
   </head>
 
@@ -26,17 +27,17 @@
                 <div class="col-8 top-nav-menu red">
 
                     <ul class="nav">
-                        <li class="nav-item">
+                        <li class="nav-item-top">
                           <img id="watchlist" class="nav-icons" src="images/transparant.png">
                           <a class="nav-link navbar-left" href="#">WATCHLIST</a>
                         </li>
 
-                        <li class="nav-item nav-top-middle">
+                        <li class="nav-item-top nav-top-middle">
                           <img id="profile" class="nav-icons" src="images/transparant.png">
                           <a class="nav-link nav-top-middle-text" href="#">PROFILE</a>
                         </li>
 
-                        <li class="nav-item">
+                        <li class="nav-item-top">
                           <a class="nav-link" href="#">LOGOUT</a>
                         </li>
                     </ul>
@@ -55,27 +56,27 @@
 
 
 
-            <!--<div class="row">
+            <div class="bottom-nav row justify-content-between">
 
-                <div class="col-8 red">
+                <div class="col-8 bottom-nav-menu red">
 
                     <ul class="nav">
-                        <li class="nav-item">
+                        <li class="nav-item-bottom">
                           <a class="nav-link active" href="#">HOME</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item-bottom">
                           <a class="nav-link" href="#">ART</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item-bottom">
                           <a class="nav-link" href="#">ISEARCH</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item-bottom">
                           <a class="nav-link" href="#">MYAUCTIONS</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item-bottom">
                           <a class="nav-link" href="#">MYBIDS</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item-bottom">
                           <a class="nav-link" href="#">CONTACT</a>
                         </li>
                     </ul>
@@ -83,11 +84,11 @@
                 </div>
 
 
-                <div class="col-2 blue nav-room-between float-right">
+                <div class="col-2 blue languages">
                   <p><a href="#">NL</a> <a href="#">FR</a> <a href="#">EN</a></p>
                 </div>
 
-            </div>-->
+            </div>
 
         </div>
 
