Achtergrond kleur navigatie toegevoegd

--- a/home.html
+++ b/home.html
@@ -17,82 +17,83 @@
   <body>
 
 
-    <div class="container yellow">
+            <div class="container-nav-top">
+
+                <div class="top-nav row justify-content-between">
+                    <div class="col-8 top-nav-menu red">
+
+                        <ul class="nav">
+                            <li class="nav-item-top">
+                              <img id="watchlist" class="nav-icons" src="images/transparant.png">
+                              <a class="nav-link navbar-left" href="#">WATCHLIST</a>
+                            </li>
+
+                            <li class="nav-item-top nav-top-middle">
+                              <img id="profile" class="nav-icons" src="images/transparant.png">
+                              <a class="nav-link nav-top-middle-text" href="#">PROFILE</a>
+                            </li>
+
+                            <li class="nav-item-top">
+                              <a class="nav-link" href="#">LOGOUT</a>
+                            </li>
+                        </ul>
+
+                    </div>
+
+
+                    <div class="col-4 blue searchbar">
+                      <form action="home.html">
+                        <input type="text" placeholder="Search" name="search">
+                        <button type="submit"><img src="images/searchicon.png" alt="search-icon"></i></button>
+                      </form>
+                    </div>
+                </div>
+
+            </div>
 
 
 
-        <div class="nav-room-left">
+            <div class="container-nav-bottom">
 
-            <div class="top-nav row justify-content-between">
-                <div class="col-8 top-nav-menu red">
+                <div class="bottom-nav row justify-content-between">
 
-                    <ul class="nav">
-                        <li class="nav-item-top">
-                          <img id="watchlist" class="nav-icons" src="images/transparant.png">
-                          <a class="nav-link navbar-left" href="#">WATCHLIST</a>
-                        </li>
+                    <div class="col-8 bottom-nav-menu red">
 
-                        <li class="nav-item-top nav-top-middle">
-                          <img id="profile" class="nav-icons" src="images/transparant.png">
-                          <a class="nav-link nav-top-middle-text" href="#">PROFILE</a>
-                        </li>
+                        <ul class="nav">
+                            <li class="nav-item-bottom">
+                              <a class="nav-link active" href="#">HOME</a>
+                            </li>
+                            <li class="nav-item-bottom">
+                              <a class="nav-link" href="#">ART</a>
+                            </li>
+                            <li class="nav-item-bottom">
+                              <a class="nav-link" href="#">ISEARCH</a>
+                            </li>
+                            <li class="nav-item-bottom">
+                              <a class="nav-link" href="#">MYAUCTIONS</a>
+                            </li>
+                            <li class="nav-item-bottom">
+                              <a class="nav-link" href="#">MYBIDS</a>
+                            </li>
+                            <li class="nav-item-bottom">
+                              <a class="nav-link" href="#">CONTACT</a>
+                            </li>
+                        </ul>
 
-                        <li class="nav-item-top">
-                          <a class="nav-link" href="#">LOGOUT</a>
-                        </li>
-                    </ul>
+                    </div>
+
+
+                    <div class="col-2 blue languages">
+                      <p><a href="#">NL</a> <a href="#">FR</a> <a href="#">EN</a></p>
+                    </div>
 
                 </div>
 
-
-                <div class="col-4 blue searchbar">
-                  <form action="home.html">
-                    <input type="text" placeholder="Search" name="search">
-                    <button type="submit"><img src="images/searchicon.png" alt="search-icon"></i></button>
-                  </form>
-                </div>
             </div>
 
 
 
 
-            <div class="bottom-nav row justify-content-between">
-
-                <div class="col-8 bottom-nav-menu red">
-
-                    <ul class="nav">
-                        <li class="nav-item-bottom">
-                          <a class="nav-link active" href="#">HOME</a>
-                        </li>
-                        <li class="nav-item-bottom">
-                          <a class="nav-link" href="#">ART</a>
-                        </li>
-                        <li class="nav-item-bottom">
-                          <a class="nav-link" href="#">ISEARCH</a>
-                        </li>
-                        <li class="nav-item-bottom">
-                          <a class="nav-link" href="#">MYAUCTIONS</a>
-                        </li>
-                        <li class="nav-item-bottom">
-                          <a class="nav-link" href="#">MYBIDS</a>
-                        </li>
-                        <li class="nav-item-bottom">
-                          <a class="nav-link" href="#">CONTACT</a>
-                        </li>
-                    </ul>
-
-                </div>
-
-
-                <div class="col-2 blue languages">
-                  <p><a href="#">NL</a> <a href="#">FR</a> <a href="#">EN</a></p>
-                </div>
-
-            </div>
-
-        </div>
-
-    </div>
 
 
     <!-- Bootstrap gebruikt jquery en popper -->
