--- a/home.html
+++ b/home.html
@@ -84,7 +84,11 @@
 
 
                     <div class="col-2 blue languages">
-                      <p><a href="#">NL</a> <a href="#">FR</a> <a href="#">EN</a></p>
+                      <p>
+                        <a href="#">NL</a>
+                        <a href="#">FR</a>
+                        <a href="#">EN</a>
+                      </p>
                     </div>
 
                 </div>
