--- a/home.html
+++ b/home.html
@@ -16,6 +16,9 @@
 
   <body>
 
+            <div class="logo-space">
+              <img class="logo-top" src="images/logo-top.jpg" alt="logo Landoretti Art">
+            </div>
 
             <div class="container-nav-top">
 
@@ -44,7 +47,7 @@
                     <div class="col-4 blue searchbar">
                       <form action="home.html">
                         <input type="text" placeholder="Search" name="search">
-                        <button type="submit"><img src="images/searchicon.png" alt="search-icon"></i></button>
+                        <button type="submit"><img src="images/searchicon.png" alt="search-icon"></button>
                       </form>
                     </div>
                 </div>
@@ -95,6 +98,24 @@
 
             </div>
 
+
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner" role="listbox">
+
+                    <div class="carousel-item active">
+                        <img class="d-block img-fluid" src="images/slider-1.jpg" alt="First slide">
+                    </div>
+
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="images/slider-2.jpg" alt="Second slide">
+                    </div>
+
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="images/slider-3.jpg" alt="Third slide">
+                    </div>
+
+                </div>
+            </div>
 
 
 
