--- a/home.html
+++ b/home.html
@@ -16,106 +16,128 @@
 
   <body>
 
-            <div class="logo-space">
-              <img class="logo-top" src="images/logo-top.jpg" alt="logo Landoretti Art">
-            </div>
-
-            <div class="container-nav-top">
-
-                <div class="top-nav row justify-content-between">
-                    <div class="col-8 top-nav-menu red">
-
-                        <ul class="nav">
-                            <li class="nav-item-top">
-                              <img id="watchlist" class="nav-icons" src="images/transparant.png">
-                              <a class="nav-link navbar-left" href="#">WATCHLIST</a>
-                            </li>
-
-                            <li class="nav-item-top nav-top-middle">
-                              <img id="profile" class="nav-icons" src="images/transparant.png">
-                              <a class="nav-link nav-top-middle-text" href="#">PROFILE</a>
-                            </li>
-
-                            <li class="nav-item-top">
-                              <a class="nav-link" href="#">LOGOUT</a>
-                            </li>
-                        </ul>
-
-                    </div>
-
-
-                    <div class="col-4 blue searchbar">
-                      <form action="home.html">
-                        <input type="text" placeholder="Search" name="search">
-                        <button type="submit"><img src="images/searchicon.png" alt="search-icon"></button>
-                      </form>
-                    </div>
-                </div>
-
-            </div>
+      <!-- Navigation -->
+      <div class="logo-space">
+        <img class="logo-top" src="images/logo-top.jpg" alt="logo Landoretti Art">
+      </div>
 
 
 
-            <div class="container-nav-bottom">
 
-                <div class="bottom-nav row justify-content-between">
-
-                    <div class="col-8 bottom-nav-menu red">
-
-                        <ul class="nav">
-                            <li class="nav-item-bottom">
-                              <a class="nav-link active" href="#">HOME</a>
-                            </li>
-                            <li class="nav-item-bottom">
-                              <a class="nav-link" href="#">ART</a>
-                            </li>
-                            <li class="nav-item-bottom">
-                              <a class="nav-link" href="#">ISEARCH</a>
-                            </li>
-                            <li class="nav-item-bottom">
-                              <a class="nav-link" href="#">MYAUCTIONS</a>
-                            </li>
-                            <li class="nav-item-bottom">
-                              <a class="nav-link" href="#">MYBIDS</a>
-                            </li>
-                            <li class="nav-item-bottom">
-                              <a class="nav-link" href="#">CONTACT</a>
-                            </li>
-                        </ul>
-
-                    </div>
+      <div class="container-nav-top">
+          <div class="top-nav row justify-content-between">
 
 
-                    <div class="col-2 blue languages">
-                      <p>
-                        <a href="#">NL</a>
-                        <a href="#">FR</a>
-                        <a href="#">EN</a>
-                      </p>
-                    </div>
+              <div class="col-8 top-nav-menu">
 
-                </div>
+                  <ul class="nav">
+                      <li class="nav-item-top">
+                        <img id="watchlist" class="nav-icons" src="images/transparant.png">
+                        <a class="nav-link navbar-left" href="#">WATCHLIST</a>
+                      </li>
 
-            </div>
+                      <li class="nav-item-top nav-top-middle">
+                        <img id="profile" class="nav-icons" src="images/transparant.png">
+                        <a class="nav-link nav-top-middle-text" href="#">PROFILE</a>
+                      </li>
+
+                      <li class="nav-item-top">
+                        <a class="nav-link" href="#">LOGOUT</a>
+                      </li>
+                  </ul>
+
+              </div>
 
 
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner" role="listbox">
+              <div class="col-4 searchbar">
+                <form action="home.html">
+                  <input type="text" placeholder="Search" name="search">
+                  <button type="submit"><img src="images/searchicon.png" alt="search-icon"></button>
+                </form>
+              </div>
 
-                    <div class="carousel-item active">
-                        <img class="d-block img-fluid" src="images/slider-1.jpg" alt="First slide">
-                    </div>
 
-                    <div class="carousel-item">
-                        <img class="d-block img-fluid" src="images/slider-2.jpg" alt="Second slide">
-                    </div>
+          </div>
+      </div><!-- end container-nav-top -->
 
-                    <div class="carousel-item">
-                        <img class="d-block img-fluid" src="images/slider-3.jpg" alt="Third slide">
-                    </div>
 
-                </div>
-            </div>
+
+      <div class="container-nav-bottom">
+          <div class="bottom-nav row justify-content-between">
+
+
+              <div class="col-8 bottom-nav-menu">
+
+                  <ul class="nav">
+                      <li class="nav-item-bottom">
+                        <a class="nav-link active" href="#">HOME</a>
+                      </li>
+                      <li class="nav-item-bottom">
+                        <a class="nav-link" href="#">ART</a>
+                      </li>
+                      <li class="nav-item-bottom">
+                        <a class="nav-link" href="#">ISEARCH</a>
+                      </li>
+                      <li class="nav-item-bottom">
+                        <a class="nav-link" href="#">MYAUCTIONS</a>
+                      </li>
+                      <li class="nav-item-bottom">
+                        <a class="nav-link" href="#">MYBIDS</a>
+                      </li>
+                      <li class="nav-item-bottom">
+                        <a class="nav-link" href="#">CONTACT</a>
+                      </li>
+                  </ul>
+
+              </div>
+
+
+              <div class="col-2 languages">
+                <p>
+                  <a href="#">NL</a>
+                  <a href="#">FR</a>
+                  <a href="#">EN</a>
+                </p>
+              </div>
+
+
+          </div>
+      </div><!-- end container-nav-bottom -->
+
+
+
+
+      <div id="SliderHome" class="carousel slide" data-ride="carousel">
+
+          <!-- images slider -->
+          <div class="carousel-inner" role="listbox">
+
+              <div class="carousel-item active">
+                  <img class="d-block img-fluid" src="images/slider/art-gallery.jpg" alt="Slider image of art gallery">
+              </div>
+
+              <div class="carousel-item">
+                  <img class="d-block img-fluid" src="images/slider/vintage-camera.jpg" alt="Slider image of vintage camera">
+              </div>
+
+              <div class="carousel-item">
+                  <img class="d-block img-fluid" src="images/slider/record-player.jpg" alt="Slider image of of record player">
+              </div>
+
+          </div>
+
+          <!-- controls slider -->
+          <a class="carousel-control-prev" href="#SliderHome" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+          </a>
+
+          <a class="carousel-control-next" href="#SliderHome" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+          </a>
+
+      </div><!-- end carousel slider top -->
 
 
 
