Toevoegen indicators slider home

--- a/home.html
+++ b/home.html
@@ -109,6 +109,13 @@
 
       <div id="SliderHome" class="carousel slide" data-ride="carousel">
 
+          <!-- indicators onderaan slider -->
+          <ol class="carousel-indicators">
+              <li data-target="#SliderHome" data-slide-to="0" class="active"></li>
+              <li data-target="#SliderHome" data-slide-to="1"></li>
+              <li data-target="#SliderHome" data-slide-to="2"></li>
+          </ol>
+
           <!-- images slider -->
           <div class="carousel-inner" role="listbox">
 
