header structuur widths % herwerkt voor scalability

--- a/home.html
+++ b/home.html
@@ -25,10 +25,10 @@
 
 
       <div class="container-nav-top">
-          <div class="top-nav row justify-content-between">
+          <div class="top-nav row">
 
 
-              <div class="col-8 top-nav-menu">
+              <div class="top-nav-menu">
 
                   <ul class="nav">
                       <li class="nav-item-top">
@@ -49,7 +49,7 @@
               </div>
 
 
-              <div class="col-4 searchbar">
+              <div class="searchbar">
                 <form action="home.html">
                   <input type="text" placeholder="Search" name="search">
                   <button type="submit"><img src="images/searchicon.png" alt="search-icon"></button>
@@ -63,10 +63,10 @@
 
 
       <div class="container-nav-bottom">
-          <div class="bottom-nav row justify-content-between">
+          <div class="bottom-nav row">
 
 
-              <div class="col-8 bottom-nav-menu">
+              <div class="bottom-nav-menu">
 
                   <ul class="nav">
                       <li class="nav-item-bottom">
@@ -92,7 +92,7 @@
               </div>
 
 
-              <div class="col-2 languages">
+              <div class="languages">
                 <p>
                   <a href="#">NL</a>
                   <a href="#">FR</a>
