Info kolommen toegevoegd onder slider.

--- a/home.html
+++ b/home.html
@@ -145,11 +145,39 @@
           </a>
 
 
+          <img class="circle-icon" src="images/slider-bol-icon.png" alt="circle icon">
           <div class="text-on-slider">
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a.</p>
           </div>
 
       </div><!-- end carousel slider top -->
+
+
+
+
+      <div class="container">
+
+          <div class="row">
+              <div class="col-lg-4 home-info-col">
+                <img src="images/info-button-pencil.png" alt="Generic placeholder image">
+                <h4>Sign up</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+              </div>
+
+              <div class="col-lg-4 home-info-col">
+                <img src="images/info-button-vinkje.png" alt="Generic placeholder image">
+                <h4>Make deals</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+              </div>
+
+              <div class="col-lg-4 home-info-col">
+                <img src="images/info-button-smiley.png" alt="Generic placeholder image">
+                <h4>Everyone happy!</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+              </div>
+          </div><!-- einde .row -->
+
+      </div>
 
 
 
