Kolommen info home aangepaste breedte, titel toegevoegd

--- a/home.html
+++ b/home.html
@@ -157,6 +157,8 @@
 
       <div class="container">
 
+          <h2 class=" home-info-title">How does it work?</h2>
+
           <div class="row">
               <div class="col-lg-4 home-info-col">
                 <img src="images/info-button-pencil.png" alt="Generic placeholder image">
