Toegevoegd blok voor carousel met titel

--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
   </head>
 
@@ -157,7 +157,7 @@
 
       <div class="container">
 
-          <h2 class=" home-info-title">How does it work?</h2>
+          <h2 class="home-info-title">How does it work?</h2>
 
           <div class="row">
               <div class="col-lg-4 home-info-col">
@@ -178,6 +178,19 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
               </div>
           </div><!-- einde .row -->
+
+      </div>
+
+
+      <div class="container-carousel">
+
+        <div class="container">
+
+            <h2 class="home-carousel-title">Most popular this week</h2>
+
+
+
+        </div>
 
       </div>
 
