Titel uit carousel toegevoegd

--- a/home.html
+++ b/home.html
@@ -32,12 +32,12 @@
 
                   <ul class="nav">
                       <li class="nav-item-top">
-                        <img id="watchlist" class="nav-icons" src="images/transparant.png">
+                        <img id="watchlist" class="float" src="images/transparant.png">
                         <a class="nav-link navbar-left" href="#">WATCHLIST</a>
                       </li>
 
                       <li class="nav-item-top nav-top-middle">
-                        <img id="profile" class="nav-icons" src="images/transparant.png">
+                        <img id="profile" class="float" src="images/transparant.png">
                         <a class="nav-link nav-top-middle-text" href="#">PROFILE</a>
                       </li>
 
@@ -186,7 +186,10 @@
 
         <div class="container">
 
-            <h2 class="home-carousel-title">Most popular this week</h2>
+            <div class="home-carousel-title">
+              <h2 class="display-inline">Most popular this week</h2>
+              <img id="more-arrow" class="display-inline" src="images/transparant.png">
+            </div>
 
 
 
