Mozaik images toegevoegd

--- a/home.html
+++ b/home.html
@@ -188,7 +188,14 @@
 
             <div class="home-carousel-title">
               <h2 class="display-inline">Most popular this week</h2>
-              <img id="more-arrow" class="display-inline" src="images/transparant.png">
+              <a href="#" class="more-arrow-link"><img id="more-arrow" class="display-inline" src="images/transparant.png" alt="arrow"></a>
+            </div>
+
+
+            <div class="grid clearfix">
+              <img class="grid-item" src="images/ring-mozaik.jpg" alt="magnifying glass on paper with post stamps">
+              <img class="grid-item grid-item--width2" src="images/klok-mozaik2.jpg" alt="painting of woman">
+              <img class="grid-item" src="images/vrouw-mozaik.jpg" alt="Dahli's melted clock">
             </div>
 
 
@@ -205,6 +212,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+  
+
   </body>
 
 </html>
