--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <!-- Voor responsiveness, Bootstrap is mobile first -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link href="css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
@@ -192,11 +193,40 @@
             </div>
 
 
-            <div class="grid clearfix">
-              <img class="grid-item" src="images/ring-mozaik.jpg" alt="magnifying glass on paper with post stamps">
-              <img class="grid-item grid-item--width2" src="images/klok-mozaik2.jpg" alt="painting of woman">
-              <img class="grid-item" src="images/vrouw-mozaik.jpg" alt="Dahli's melted clock">
-            </div>
+            <div class="mozaik clearfix">
+
+                <div class="mozaik-image">
+                    <div class="position">
+                        <img src="images/ring-mozaik.jpg" class="img-fluid" alt="magnifying glass on paper with post stamps">
+                        <div class="overlay flex-center">
+                            <a href="#"><img src="images/searchicon-groot.png" alt="See artwork"></a>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="mozaik-image mozaik-item-width2">
+                    <div class="position">
+                        <img src="images/klok-mozaik.jpg" class="img-fluid" alt="Dahli's melted clock">
+                        <div class="overlay flex-center">
+                            <a href="#"><img src="images/searchicon-groot.png" alt="See artwork"></a>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="mozaik-image">
+                    <div class="position">
+                        <img src="images/vrouw-mozaik.jpg" class="img-fluid " alt="Painting of woman">
+                        <div class="overlay flex-center">
+                            <a href="#"><img src="images/searchicon-groot.png" alt="See artwork"></a>
+                        </div>
+                    </div>
+                </div>
+
+            </div><!-- einde mozaik -->
 
 
 
@@ -212,7 +242,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-  
+    <script type="text/javascript" src="js/mdb.min.js"></script>
 
   </body>
 
