Toegevoegd footer basic outline

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
 
       <!-- Navigation -->
       <div class="logo-space">
-        <img class="logo-top" src="images/logo-top.jpg" alt="logo Landoretti Art">
+        <a href="home.html"><img class="logo-top" src="images/logo-top.jpg" alt="logo Landoretti Art"></a>
       </div>
 
 
@@ -183,14 +183,15 @@
       </div>
 
 
-      <div class="container-carousel">
+      <div class="container-mozaik">
+        <div class="container padding-0">
 
-        <div class="container">
 
-            <div class="home-carousel-title">
+            <div class="home-mozaik-title">
               <h2 class="display-inline">Most popular this week</h2>
               <a href="#" class="more-arrow-link"><img id="more-arrow" class="display-inline" src="images/transparant.png" alt="arrow"></a>
             </div>
+
 
 
             <div class="mozaik clearfix">
@@ -229,9 +230,15 @@
             </div><!-- einde mozaik -->
 
 
+        </div>
+      </div><!-- einde container mozaik -->
+
+      <div class="container-footer">
+        <div class="container padding-0">
+
+          hello
 
         </div>
-
       </div>
 
 
