footer eerste 3 kolommen toegevoegd

--- a/home.html
+++ b/home.html
@@ -233,10 +233,121 @@
         </div>
       </div><!-- einde container mozaik -->
 
+
+
+
       <div class="container-footer">
         <div class="container padding-0">
 
-          hello
+
+          <div class="row footer">
+
+
+            <div class="col">
+
+              <div class="blok">
+                <p class="footer-title">HELP</p>
+                <p><a href="#">Login</a></p>
+                <p><a href="#">Register</a></p>
+              </div>
+
+
+              <div class="blok">
+                <p class="footer-title">HELP</p>
+                <p><a href="#">Terms of Service</a></p>
+                <p><a href="#">Privacy Policy</a></p>
+                <p><a href="#">FAQ</a></p>
+                <p><a href="#">Contact Us</a></p>
+                <p><a href="#">About Us</a></p>
+              </div>
+
+
+              <div class="blok">
+                <p class="footer-title">LANGUAGES</p>
+                <p><a href="#">Nederlands</a></p>
+                <p><a href="#">Français</a></p>
+                <p><a href="#">English</a></p>
+              </div>
+
+            </div><!-- einde column 1 footer -->
+
+
+
+
+
+            <div class="col">
+
+              <div class="blok">
+                <p class="footer-title">STYLE</p>
+                <p><a href="#">Abstract</a></p>
+                <p><a href="#">African American</a></p>
+                <p><a href="#">Asian Contemporary</a></p>
+                <p><a href="#">Conceptual</a></p>
+                <p><a href="#">Contemporary</a></p>
+                <p><a href="#">Emerging Artists</a></p>
+                <p><a href="#">Figurative</a></p>
+                <p><a href="#">Middle Eastern Contemporary</a></p>
+                <p><a href="#">Minimalism</a></p>
+                <p><a href="#">Modern</a></p>
+                <p><a href="#">Pop</a></p>
+                <p><a href="#">Urban</a></p>
+                <p><a href="#">Vintage Photographs</a></p>
+              </div>
+
+
+              <div class="blok">
+                <p class="footer-title">STYLE</p>
+                <p><a href="#">Design</a></p>
+                <p><a href="#">Paintings and Works on Paper</a></p>
+                <p><a href="#">Photographs</a></p>
+                <p><a href="#">Prints and Multiples</a></p>
+                <p><a href="#">Sculpture</a></p>
+              </div>
+
+            </div><!-- einde column 2 footer -->
+
+
+
+
+
+            <div class="col">
+
+              <div class="blok">
+                <p class="footer-title">PRICE</p>
+                <p><a href="#">Up to 5,000</a></p>
+                <p><a href="#">5,000–10,000</a></p>
+                <p><a href="#">10,000–25,000</a></p>
+                <p><a href="#">25,000–50,000</a></p>
+                <p><a href="#">50,000–100,000</a></p>
+                <p><a href="#">Above</a></p>
+              </div>
+
+
+              <div class="blok">
+                <p class="footer-title">ERA</p>
+                <p><a href="#">Pre-War</a></p>
+                <p><a href="#">1940s–1950s</a></p>
+                <p><a href="#">1960s–1980s</a></p>
+                <p><a href="#">1990s–Present</a></p>
+              </div>
+
+
+              <div class="blok">
+                <p class="footer-title">ENDINGS</p>
+                <p><a href="#">Ending this Week</a></p>
+                <p><a href="#">Newly Listed</a></p>
+                <p><a href="#">Purchase Now</a></p>
+                <p><a href="#">1990s–Present</a></p>
+              </div>
+
+            </div> <!-- einde column 3 footer -->
+
+
+            <div class="col">
+              hello
+            </div>
+
+          </div>
 
         </div>
       </div>
