Rechter kolom footer opgezet, nog images in plaatsen

--- a/home.html
+++ b/home.html
@@ -344,7 +344,41 @@
 
 
             <div class="col">
-              hello
+              <div class="blok">
+                <p class="footer-title">FIND WHAT YOU NEED.</p>
+              </div>
+
+
+              <div class="blok">
+                <p class="footer-title">CONTACT</p>
+                <p>Landoretti ART</p>
+                <p>Straatnaam xxx</p>
+                <p>xxxx, Oostende</p>
+              </div>
+
+
+              <div class="blok">
+
+                <div>
+                  <img id="cellphone" class="display-inline" src="images/transparant.png" alt="cellphone">
+                  <p class="display-inline">+xx (0)x xxx xx xx</p>
+                </div>
+
+                <div>
+                  <img id="mail" class="display-inline" src="images/transparant.png" alt="mail envelope">
+                  <p class="display-inline"><a href="mailto:info@landorettiart.com">info@landorettiart.com</a></p>
+
+                </div>
+              </div>
+
+              <div class="blok">
+                <a href="#" class="display-inline"><img src="images/transparant.png" alt="Facebook link"></a>
+                <a href="#" class="display-inline"><img src="images/transparant.png" alt="Twitter link"></a>
+                <a href="#" class="display-inline"><img src="images/transparant.png" alt="Youtube link"></a>
+                <a href="#" class="display-inline"><img src="images/transparant.png" alt="Google+ link"></a>
+              </div>
+
+
             </div>
 
           </div>
