Toegevoegd images uit spritesheet social en footer icons

--- a/home.html
+++ b/home.html
@@ -357,7 +357,7 @@
               </div>
 
 
-              <div class="blok">
+              <div class="blok contact-info">
 
                 <div>
                   <img id="cellphone" class="display-inline" src="images/transparant.png" alt="cellphone">
@@ -367,15 +367,14 @@
                 <div>
                   <img id="mail" class="display-inline" src="images/transparant.png" alt="mail envelope">
                   <p class="display-inline"><a href="mailto:info@landorettiart.com">info@landorettiart.com</a></p>
-
                 </div>
               </div>
 
-              <div class="blok">
-                <a href="#" class="display-inline"><img src="images/transparant.png" alt="Facebook link"></a>
-                <a href="#" class="display-inline"><img src="images/transparant.png" alt="Twitter link"></a>
-                <a href="#" class="display-inline"><img src="images/transparant.png" alt="Youtube link"></a>
-                <a href="#" class="display-inline"><img src="images/transparant.png" alt="Google+ link"></a>
+              <div class="blok social-icons">
+                <a href="#" class="display-inline"><img id="facebook" src="images/transparant.png" alt="Facebook link"></a>
+                <a href="#" class="display-inline"><img id="twitter" src="images/transparant.png" alt="Twitter link"></a>
+                <a href="#" class="display-inline"><img id="youtube" src="images/transparant.png" alt="Youtube link"></a>
+                <a href="#" class="display-inline"><img id="google" src="images/transparant.png" alt="Google+ link"></a>
               </div>
 
 
