Footer searchbar toegevoegd

--- a/home.html
+++ b/home.html
@@ -344,8 +344,16 @@
 
 
             <div class="col">
-              <div class="blok">
+              <div class="blok search-footer">
                 <p class="footer-title">FIND WHAT YOU NEED.</p>
+
+                <div class="searchbar">
+                  <form action="home.html">
+                    <input type="text" placeholder="Search" name="search">
+                    <button type="submit"><img src="images/searchicon.png" alt="search-icon"></button>
+                  </form>
+                </div>
+
               </div>
 
 
