Copyright in laatste kolom footer toegevoegd

--- a/home.html
+++ b/home.html
@@ -385,6 +385,8 @@
                 <a href="#" class="display-inline"><img id="google" src="images/transparant.png" alt="Google+ link"></a>
               </div>
 
+              <p class="copyright">© 2013 Studio6, Inc. All rights reserved.</p>
+
 
             </div>
 
