Onderste deel footer toegevoegd

--- a/home.html
+++ b/home.html
@@ -393,6 +393,55 @@
           </div>
 
         </div>
+      </div><!-- end container footer upper part-->
+
+
+
+      <div class="container-nav-bottom">
+          <div class="bottom-nav row">
+
+
+              <div class="bottom-nav-menu">
+
+                  <ul class="nav">
+                      <li class="nav-item-bottom">
+                        <a class="nav-link active" href="#">HOME</a>
+                      </li>
+                      <li class="nav-item-bottom">
+                        <a class="nav-link" href="#">ART</a>
+                      </li>
+                      <li class="nav-item-bottom">
+                        <a class="nav-link" href="#">ISEARCH</a>
+                      </li>
+                      <li class="nav-item-bottom">
+                        <a class="nav-link" href="#">MYAUCTIONS</a>
+                      </li>
+                      <li class="nav-item-bottom">
+                        <a class="nav-link" href="#">MYBIDS</a>
+                      </li>
+                      <li class="nav-item-bottom">
+                        <a class="nav-link" href="#">CONTACT</a>
+                      </li>
+                  </ul>
+
+              </div>
+
+
+              <div class="languages">
+                <p>
+                  <a href="#">NL</a>
+                  <a href="#">FR</a>
+                  <a href="#">EN</a>
+                </p>
+              </div>
+
+
+          </div>
+      </div><!-- end container footer bottom part -->
+
+
+      <div class="logo-space">
+        <a href="home.html"><img class="logo-bottom" src="images/logo-bottom.jpg" alt="logo Landoretti Art"></a>
       </div>
 
 
